cool-app/k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cool-app
spec:
  selector:
    app: postgres
  ports:
    - name: psql
      port: 5432
      targetPort: 5432
  type: ClusterIP
